# kassette

./: .gitignore  Cargo.toml  Makefile  build.rs  config.txt  copy_to_pi.sh  kernel_config  pins.txt  todo.txt
.cargo/: config
src/: config.rs  led.rs  log.rs  main.rs  media_definition.rs  pins.rs  player.rs  polyfill.rs  rfid.rs  rotary_encoder.rs  save_state.rs  sound.rs
