[package]
name = "rfid_player"
version = "0.1.0"
authors = ["ftilde <ftilde@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rfid-rs = "0.1.1"
rfid-rs = { path = "../../rfid-rs" }
spidev = "0.4"
#wavy = { path = "../wavy/" }
#cpal = "0.11"
libc = "0.2"
nix = "0.17"
alsa = "0.4"
