[package]
name = "kassette"
version = "0.1.0"
authors = ["ftilde <ftilde@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rfid-rs = "0.1.1"
rfid-rs = { path = "../rfid-rs" }
spidev = "0.4"
libc = "0.2"
nix = "0.17"
alsa = "0.4"
lewton = "0.10" #.ogg decoder
rppal = "0.11"
miniserde = "0.1"
