[package]
name = "kassette"
version = "0.1.0"
authors = ["ftilde <ftilde@protonmail.com>"]
edition = "2018"

[profile.release]
#strip = "symbols"
lto = "fat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfid-rs = "0.1.1"
spidev = "0.4"
libc = "0.2"
nix = "0.17"
alsa = "0.4"
lewton = "0.10" #.ogg decoder
rppal = "0.11"
miniserde = "0.1"
argh = "0.1"
once_cell = "1.4.0"
